--- a/css/index.css
+++ b/css/index.css
@@ -396,6 +396,29 @@ footer{
     min-height: 54.1666666667vw;
     font-size: 16px;
 }
+
+.splide__arrow {
+    bottom: 0;
+    top: auto;
+    background-image: url(../img/slick-arrow.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.splide__arrow--prev{
+    right: 180px;
+    left: auto;
+    scale: -1;
+    translate: 0% -100%;
+}
+.splide__arrow--next{
+    right: 70px;
+}
+.splide__arrow svg{
+    display: none;
+}
 /* .card-item:hover{
     box-shadow: 26px 10px 16px 0px #0000000D;
     scale: 1.01;
@@ -525,6 +548,10 @@ footer{
 }
 
 @media(max-width: 767px){
+    .servicesSliderOne ul.splide__pagination{
+        max-width: 100%;
+        width: 100%;
+    }
     .icon-box img {
         width: 20px;
     }
@@ -551,7 +578,7 @@ footer{
         margin-inline: 30px;
     }
     .text_xl {
-        font-size: 38px;
+        font-size: 35px;
     }
     #web-technologies .flex{
         /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
