--- a/css/index.css
+++ b/css/index.css
@@ -108,8 +108,10 @@ footer{
     z-index: 1;
     position: relative;
 }
-#services,  #cards, #why{
-    background-color: #f5f5f5;
+#services,  #cards, #why,
+#web-technologies{
+    /* background-color: #f5f5f5; */
+    background-image: linear-gradient(180deg, #fbfbfb, #fff);
 }
 
 #hero:hover .cursor{
@@ -362,20 +364,24 @@ footer{
     padding-top: 12px;
 }
 
-.servicesSliderOne .splide__slide{
-    display: none;
-    /* transition: 0.3s ease; */
-    opacity: 0;
-}
-.servicesSliderOne .splide__slide.is-visible{
-    display: block;
-    animation: fadein 1s forwards;
+
+@media(min-width: 768px){
+    .servicesSliderOne .splide__slide{
+        display: none;
+        /* transition: 0.3s ease; */
+        opacity: 0;
+    }
+    .servicesSliderOne .splide__slide.is-visible{
+        display: block;
+        animation: fadein 1s forwards;
+    }
+    
+    @keyframes fadein {
+        0%{opacity: 0;}
+        100%{opacity: 1;}
+    }
 }
 
-@keyframes fadein {
-    0%{opacity: 0;}
-    100%{opacity: 1;}
-}
 
 #cards .flex{
     flex-wrap: wrap;
@@ -539,6 +545,9 @@ footer{
 .font-inherit{
     font-size: inherit;
 }
+.testimonialSlider {
+    margin-bottom: 0 !important;
+}
 
 @media(max-width: 1366px) and (min-width: 768px){
     .circular-box{
@@ -554,6 +563,13 @@ footer{
 }
 
 @media(max-width: 767px){
+    #services .container{
+        padding-inline: 0px;
+    }
+    #contact .grid.two-equal-col{
+        display: flex;
+        flex-direction: column-reverse;
+    }
     .servicesSliderOne ul.splide__pagination{
         max-width: 80%;
         width: 100%;
@@ -597,6 +613,7 @@ footer{
     }
     .servicesSliderOne .grid.two-equal-col > div:nth-child(2){
         margin-inline: 30px;
+        height: 210px;
     }
     .text_xl {
         font-size: 35px;
